--- a/pages/phanart/oan.html
+++ b/pages/phanart/oan.html
@@ -180,6 +180,31 @@
                 style="object-position: 50% 22%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893618613317157169"></a>
         </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/035.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1904169451294957918"></a>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/036.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1904767494960898197"></a>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/037.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1904767494960898197"></a>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/038.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1904767494960898197"></a>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/039.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1904767494960898197"></a>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/040.png" alt="" loading="lazy" class="popupimg-popup-img protected-img"
+                style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1904771076397424897"></a>
+        </div>
     </div>
 </div>
 
