--- a/pages/tatsu/profile.html
+++ b/pages/tatsu/profile.html
@@ -31,7 +31,7 @@
 
 <div class="contents_block">
     <h1 class="glitch-text">tatsu プロフィール</h1>
-    <p class="update">更新 : 2025.02.11</p>
+    <p class="update">更新 : 2025.04.10</p>
 </div>
 
 <div class="contents_block contents_block_has_a">
@@ -71,10 +71,11 @@
 
     <p class="block-description">好きなアーティスト</p>
     <p class="indent-lv1">BABYMETAL</p>
-    <p class="indent-lv1">ずっと真夜中でいいのに。</p>
     <p class="indent-lv1">Ado</p>
     <p class="indent-lv1">YOASOBI</p>
+    <p class="indent-lv1">ずっと真夜中でいいのに。</p>
     <p class="indent-lv1">ファントムシータ</p>
+    <p class="indent-lv1">yosugala</p>
     <p>などなど... フェス行ったりも。</p>
     <hr>
 
@@ -113,14 +114,14 @@
         <li><a href="#cdj2425">2024.12.30 - COUNTDOWN JAPAN 2425 @幕張メッセCOSMO STAGE</a></li>
         <li><a href="#dreamscape">2025.03.23 - yosugala presents -DREAMSCAPE-"AICHI" @名古屋CLUB QUATTRO</a></li>
         <li><a href="#ladysteadypremium">2025.04.05 - Lady Steady Premium @品川ステラボール</a></li>
+
+
         <li><a href="#oceanmarket">2025.05.01 - OCEAN MARKET FES 2025 シータの宵祭り @横須賀市 三笠公園</a></li>
-
-
-        <!-- <li><a href="">2025.07.21 - 1st JAPAN TOUR 「フレイム・メドゥーサ」 @Kanadevia Hall (TOKYO DOME CITY HALL)</a></li>
+        <li><a href="">2025.07.21 - 1st JAPAN TOUR 「フレイム・メドゥーサ」 @Kanadevia Hall (TOKYO DOME CITY HALL)</a></li>
         <li><a href="">2025.08.02 - 1st JAPAN TOUR 「フレイム・メドゥーサ」 @なんばHatch</p>
             </a></li>
         <li><a href="">2025.08.03 - 1st JAPAN TOUR 「フレイム・メドゥーサ」 @COMTEC PORTBASE</a></li>
-        <li><a href="">2025.08.24 - 1st JAPAN TOUR 「フレイム・メドゥーサ」 @豊洲PIT</a></li> -->
+        <li><a href="">2025.08.24 - 1st JAPAN TOUR 「フレイム・メドゥーサ」 @豊洲PIT</a></li>
 
     </ul>
 
