update index favicon etc

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
         $('head').append('<link rel="stylesheet" type="text/css" href="/static/css/glitch-animation.css?nocache=' + new Date().getTime() + '" />');
     </script>
     <!-- favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/logo/logo-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/logo/logo-16.png">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico" sizes="32x32">
+    <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <!-- apple -->
     <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
     <!-- <meta name="apple-mobile-web-app-capable" content="true"> -->
