--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         $('head').append('<link rel="stylesheet" type="text/css" href="/static/css/glitch-animation.css?nocache=' + new Date().getTime() + '" />');
     </script>
     <!-- favicon -->
-    <link rel="icon" href="/favicon.ico" sizes="32x32">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- apple -->
     <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
     <!-- <meta name="apple-mobile-web-app-capable" content="true"> -->
