add search-console meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ja">
 
 <head>
+    <!-- Google Search Console -->
+    <meta name="google-site-verification" content="X4ZIEyGTzvIfM7XPY3VB9wgOu8_tJg5okCUTfsMcZ9Q" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=GT-NM8CV7C9"></script>
     <script>
