--- a/pages/tatsu/profile.html
+++ b/pages/tatsu/profile.html
@@ -421,9 +421,29 @@
         ということで今回はこんな感じ。他のアイドルも、オタクのコールとかも合わせて楽しかった。アイドルフェスっていいね。
     </p>
 
-    <!-- <hr>
-    <h4 class="glitch-text" id="dreamscape">2025.05.01 - OCEAN MARKET FES 2025 シータの宵祭り @横須賀市 三笠公園</h4>
-    <p>整理番号????番</p> -->
-
+    <hr>
+    <h4 class="glitch-text" id="oceanmarket">2025.05.01 - OCEAN MARKET FES 2025 シータの宵祭り @横須賀市 三笠公園</h4>
+    <p>整理番号658番</p>
+    <p>
+        「シータの宵祭り」は、OCEAN MARKET
+        FESという、横須賀にある三笠公園にて開催されるフェスの一部として開催されたライブ。フェスとなっているけど、出演日に他のアーティストはいないため、実質ワンマンと公式からもアナウンスがあった。お祭りテーマってことで、それに合わせてちょっと準備。
+    </p>
+    <p>
+        前夜祭、前泊してたり関東住んでるハイネたちで。前日の夜から、もうライブは始まっているんですよ。
+    </p>
+    <p>
+        当日、たくさんハイネとお話したりしたかったけど時間が無さすぎた名古屋の反省と、フェスってことで公園内でキッチンカーとかあるってのが分かっていたので、昼過ぎくらいに到着。ビール片手に、唐揚げとか食べながら、色んな方々と交流。ライブ前のこの時間楽しくていいよね。服装はお祭りに合わせて、もなちカラーのピンクの法被で。
+    </p>
+    <img src="/static/img/tatsu/20250501-001.jpeg" alt="" class="popupimg-popup-img">
+    <p>
+        開場して入場、とりあえずめっちゃ並んでたけど物販列へ。なんか色々運営側トラブルありつつ、並んでるうちに開演しちゃったけどそのあと丘の上の方で。結果的に一番後ろの位置ではあったけど、高いとこだから視界に邪魔するものなくステージが見えて良いとこ。
+    </p>
+    <p>
+        みんなのソロの所で、ワールドツアーからの3曲聞けて、めっちゃ嬉しい。その後のTotMusicaと、asphyxiaは、CDJのリハを除いたらハイネ以来で、武道館では色々な感情もあってちゃんと聞けてなかったのまた聞けて最高。
+    </p>
+    <p>
+        HANAGATAMIで締めてからのアンコールで夏祭り。実は前に、宵祭りで夏祭り歌わないかなぁって話をしていたのもあって、本当にきて感動。イントロからやばいし、途中での盛り上げでジャンプして楽しかった。お祭りの雰囲気もあって良いライブだった。
+    </p>
+    <img src="/static/img/tatsu/20250501-002.jpeg" alt="" class="popupimg-popup-img">
 
 </div>
