--- a/pages/phanart/guoxoua.html
+++ b/pages/phanart/guoxoua.html
@@ -180,6 +180,26 @@
                 class="popupimg-popup-img protected-img" style="object-position: 50% 0%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1896533752597393846"></a>
         </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/guoxoua/007.png" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 20%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1913547916498653373"></a>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/guoxoua/008.png" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 0% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1917934995819368833"></a>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/guoxoua/009.png" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1920796036131373233"></a>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/guoxoua/010.png" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1922294321652306402"></a>
+        </div>
     </div>
 </div>
 
