--- a/pages/phanart/oan.html
+++ b/pages/phanart/oan.html
@@ -205,6 +205,21 @@
                 style="object-position: 50% 50%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1904771076397424897"></a>
         </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/041.png" alt="" loading="lazy" class="popupimg-popup-img protected-img"
+                style="object-position: 50% 0%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1918949196905750678"></a>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/042.png" alt="" loading="lazy" class="popupimg-popup-img protected-img"
+                style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1921072861055226105"></a>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/043.png" alt="" loading="lazy" class="popupimg-popup-img protected-img"
+                style="object-position: 50% 0%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1921465491471692211"></a>
+        </div>
     </div>
 </div>
 
