--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -111,16 +111,11 @@
     <p>大切な注意事項が書いてあるので、ライブに参戦予定の方は要確認です！！(公式ホームページへジャンプします。)</p>
 </div>
 
-<div class="contents_block contents_block_has_a">
-    <a class="contents_block_a" href="/?p=play.haine-test"></a>
-    <h3 class="glitch-text">ハイネ共通テスト</h3>
-    <p>あなたのシータ力を試してみましょう🔥</p>
-</div>
 
 <div class="contents_block contents_block_has_a">
-    <a class="contents_block_a" href="/?p=articles.2009-dreamscape-video"></a>
-    <h3 class="glitch-text">yosugala presents -DREAMSCAPE-"AICHI"</h3>
-    <p>ハイネの撮影した 動画/写真 まとめ</p>
+    <a class="contents_block_a" href="/?p=phanart.hisui-special"></a>
+    <h2>灯翠ちゃん ありがとう</h2>
+    <p>灯翠ちゃんのファンアートをまとめてご紹介しています。</p>
 </div>
 
 
