--- a/pages/phanart/hisui-special.html
+++ b/pages/phanart/hisui-special.html
@@ -89,6 +89,61 @@
         </div>
 
         <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haine_hisui0501-001.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 10% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haine_hisui0501/status/1928806652150747488"></a>
+            <p class="post-twitter-id">いっちぃ💚🦋<br>@haine_hisui0501</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haine_hisui0501-002.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haine_hisui0501/status/1923755915775443240"></a>
+            <p class="post-twitter-id">いっちぃ💚🦋<br>@haine_hisui0501</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haine_hisui0501-003.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 90% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haine_hisui0501/status/1917599411527692367"></a>
+            <p class="post-twitter-id">いっちぃ💚🦋<br>@haine_hisui0501</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haine_hisui0501-004.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 10% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haine_hisui0501/status/1917588030833188902"></a>
+            <p class="post-twitter-id">いっちぃ💚🦋<br>@haine_hisui0501</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haine_hisui0501-005.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 10%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haine_hisui0501/status/1898628859232424287"></a>
+            <p class="post-twitter-id">いっちぃ💚🦋<br>@haine_hisui0501</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haine_hisui0501-006.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 10%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haine_hisui0501/status/1885712748543443338"></a>
+            <p class="post-twitter-id">いっちぃ💚🦋<br>@haine_hisui0501</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haine_hisui0501-007.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haine_hisui0501/status/1885712748543443338"></a>
+            <p class="post-twitter-id">いっちぃ💚🦋<br>@haine_hisui0501</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haine_hisui0501-008.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haine_hisui0501/status/1872267136158355705"></a>
+            <p class="post-twitter-id">いっちぃ💚🦋<br>@haine_hisui0501</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haine_hisui0501-009.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 10%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haine_hisui0501/status/1869030534296568217"></a>
+            <p class="post-twitter-id">いっちぃ💚🦋<br>@haine_hisui0501</a></p>
+        </div>
+
+        <div class="popupimg-wrapper protected-img-wrapper">
             <img src="/static/img/phanart/hisui-special/e9bo_psd-001.jpg" alt="" loading="lazy"
                 class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/e9bo_psd/status/1928712290569707972"></a>
