--- a/pages/phanart/hisui-special.html
+++ b/pages/phanart/hisui-special.html
@@ -210,6 +210,12 @@
             <a class="phanart-popup-orig-link" href="https://x.com/F7F2030/status/1917594875199119387"></a>
             <p class="post-twitter-id">酸欠<br>@F7F2030</a></p>
         </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/F7F2030-003.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 90% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/F7F2030/status/1928807882448851122"></a>
+            <p class="post-twitter-id">酸欠<br>@F7F2030</a></p>
+        </div>
 
         <div class="popupimg-wrapper protected-img-wrapper">
             <img src="/static/img/phanart/hisui-special/karensorairo-001.jpg" alt="" loading="lazy"
