--- a/pages/phanart/hisui-special.html
+++ b/pages/phanart/hisui-special.html
@@ -199,9 +199,9 @@
         </div>
 
         <div class="popupimg-wrapper protected-img-wrapper">
-            <img src="/static/img/phanart/hisui-special/F7F2030-001.jpg" alt="" loading="lazy"
-                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
-            <a class="phanart-popup-orig-link" href="https://x.com/F7F2030/status/1917490175116206222"></a>
+            <img src="/static/img/phanart/hisui-special/F7F2030-003.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 90% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/F7F2030/status/1928807882448851122"></a>
             <p class="post-twitter-id">酸欠<br>@F7F2030</a></p>
         </div>
         <div class="popupimg-wrapper protected-img-wrapper">
@@ -211,9 +211,9 @@
             <p class="post-twitter-id">酸欠<br>@F7F2030</a></p>
         </div>
         <div class="popupimg-wrapper protected-img-wrapper">
-            <img src="/static/img/phanart/hisui-special/F7F2030-003.jpg" alt="" loading="lazy"
-                class="popupimg-popup-img protected-img" style="object-position: 90% 50%; /* 左,上 */">
-            <a class="phanart-popup-orig-link" href="https://x.com/F7F2030/status/1928807882448851122"></a>
+            <img src="/static/img/phanart/hisui-special/F7F2030-001.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/F7F2030/status/1917490175116206222"></a>
             <p class="post-twitter-id">酸欠<br>@F7F2030</a></p>
         </div>
 
@@ -311,6 +311,108 @@
             <a class="phanart-popup-orig-link" href="https://x.com/fulmar_krsr/status/1917595231622684936"></a>
             <p class="post-twitter-id">ふるまー<br>@fulmar_krsr</a></p>
         </div>
+
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/whota0626-006.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 30%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/whota0626/status/1928825529823801585"></a>
+            <p class="post-twitter-id">うぉーたーりりー<br>@whota0626</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/whota0626-005.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 30%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/whota0626/status/1927226309203087827"></a>
+            <p class="post-twitter-id">うぉーたーりりー<br>@whota0626</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/whota0626-004.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/whota0626/status/1917831955196043743"></a>
+            <p class="post-twitter-id">うぉーたーりりー<br>@whota0626</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/whota0626-003.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 79% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/whota0626/status/1917830351810093531"></a>
+            <p class="post-twitter-id">うぉーたーりりー<br>@whota0626</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/whota0626-002.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 90%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/whota0626/status/1917619061342757167"></a>
+            <p class="post-twitter-id">うぉーたーりりー<br>@whota0626</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/whota0626-001.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/whota0626/status/1893486249438257606"></a>
+            <p class="post-twitter-id">うぉーたーりりー<br>@whota0626</a></p>
+        </div>
+
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/s62hitn-001.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 10%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/s62hitn/status/1928760018880356554"></a>
+            <p class="post-twitter-id">𝔐𝔢𝔦<br>@s62hitn</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/s62hitn-002.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 10%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/s62hitn/status/1882026668417786146"></a>
+            <p class="post-twitter-id">𝔐𝔢𝔦<br>@s62hitn</a></p>
+        </div>
+
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/5mmm0JOr1d91534-001.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 10%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/5mmm0JOr1d91534/status/1928820867846578478"></a>
+            <p class="post-twitter-id">翠乃りんご<br>@5mmm0JOr1d91534</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/5mmm0JOr1d91534-002.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 85% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/5mmm0JOr1d91534/status/1917742579074097498"></a>
+            <p class="post-twitter-id">翠乃りんご<br>@5mmm0JOr1d91534</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/5mmm0JOr1d91534-003.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/5mmm0JOr1d91534/status/1851166025364226225"></a>
+            <p class="post-twitter-id">翠乃りんご<br>@5mmm0JOr1d91534</a></p>
+        </div>
+
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haru_haine_06-001.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haru_haine_06/status/1930249313311133722"></a>
+            <p class="post-twitter-id">はる<br>@haru_haine_06</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haru_haine_06-002.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 10%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haru_haine_06/status/1928826270722183659"></a>
+            <p class="post-twitter-id">はる<br>@haru_haine_06</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haru_haine_06-003.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 100% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haru_haine_06/status/1928809150945046704"></a>
+            <p class="post-twitter-id">はる<br>@haru_haine_06</a></p>
+        </div>
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/haru_haine_06-004.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/haru_haine_06/status/1928098927867482285"></a>
+            <p class="post-twitter-id">はる<br>@haru_haine_06</a></p>
+        </div>
+
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/hisui-special/ma_214e-001.jpg" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/ma_214e/status/1921914001488748570"></a>
+            <p class="post-twitter-id">
+                眞瑛<br>@ma_214e</a></p>
+        </div>
     </div>
 </div>
 
@@ -326,6 +428,6 @@
     <div id="popupimg-modal-protected-img-wrapper" class="protected-img-wrapper">
         <img id="popupimg-modal-protected-img" class="protected-img">
     </div>
-    <p><a id="popupimg-modal-orig-link" href="">X(Twitter)の投稿はこちら</a></p>
+    <p><a id="popupimg-modal-orig-link" href="" target="_blank">X(Twitter)の投稿はこちら</a></p>
     <script src="/static/js/popup-img.js"></script>
 </div>
